--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "1.6.8",
     "@emotion/react": "11.4.1",
     "@emotion/styled": "11.3.0",
+    "animate.css": "^4.1.1",
     "framer-motion": "4.1.17",
     "graphql": "^15.6.1",
     "next": "11.1.2",
